# C20_Circular_4Mic

./: .gitignore  CMakeLists.txt  README.md
include/: algo_config.h  awi_algo.h  awi_algo_module_accu.h
include/algo/aec/: awi_subband_aec.h  awi_subband_aec_cfg.h
include/algo/aes/: awi_aes.h  awi_aes_cfg.h
include/algo/agc/: awi_agc.h  awi_agc_cfg.h
include/algo/beam_fusion/: awi_beam_fusion.h  awi_beam_fusion_cfg.h
include/algo/beamforming/: awi_abf.h  awi_abf_cfg.h  awi_fbf.h  awi_fbf_cfg.h  fbf_params.h
include/algo/cng/: awi_cng.h  awi_cng_cfg.h
include/algo/limiter/: awi_limiter.h  awi_limiter_cfg.h
include/algo/noise_gate/: awi_noise_gate.h  awi_noise_gate_cfg.h
include/algo/ns/: awi_ns.h  awi_ns_cfg.h
include/algo/nse/: awi_nse.h  awi_nse_cfg.h
include/algo/pre_de_emphasis/: awi_emphasis.h  awi_emphasis_cfg.h
include/algo/vad/: awi_simple_vad.h  awi_simple_vad_cfg.h
include/algo/wpe/: awi_eigen_wpe.h  awi_wpe_cfg.h
include/core/channel-convert/: awi_channel_convert.h
include/core/common/: awi_audioframe.h  awi_constant.h  awi_filterbank.h  awi_filterbankframe.h  awi_filterbankparams.h  awi_utils.h
include/core/fft/: _kiss_fft_guts.h  awi_fft.h
include/core/filter-bank/: awi_dft_analysis_filter_bank.h  awi_dft_synthesis_filter_bank.h
src/: awi_algo.c
src/algo/aec/: awi_subband_aec.c  awi_subband_aec_cfg.c
src/algo/aes/: awi_aes.c  awi_aes_cfg.c
src/algo/agc/: awi_agc.c  awi_agc_cfg.c
src/algo/beam_fusion/: awi_beam_fusion.c  awi_beam_fusion_cfg.c
src/algo/beamforming/: awi_abf.c  awi_abf_cfg.c  awi_fbf.c  awi_fbf_cfg.c  fbf_params.c
src/algo/cng/: awi_cng.c  awi_cng_cfg.c
src/algo/limiter/: awi_limiter.c  awi_limiter_cfg.c
src/algo/noise_gate/: awi_noise_gate.c  awi_noise_gate_cfg.c
src/algo/ns/: awi_ns.c  awi_ns_cfg.c
src/algo/nse/: awi_nse.c  awi_nse_cfg.c
src/algo/pre_de_emphasis/: awi_emphasis.c  awi_emphasis_cfg.c
src/algo/vad/: awi_simple_vad.c  awi_simple_vad_cfg.c
src/algo/wpe/: awi_eigen_wpe.cpp  awi_wpe_cfg.c
src/core/channel-convert/: awi_channel_convert.c
src/core/common/: awi_filterbank.c  awi_filterbankframe.c  awi_utils.c
src/core/fft/: awi_fft.c  kiss_fft.c
src/core/filter-bank/: awi_dft_analysis_filter_bank.c  awi_dft_synthesis_filter_bank.c
test/base/: test_algo.c  test_pipeline.c
